--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^9.6.1",
+    "pinia": "^2.0.9",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -33,6 +35,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.5.4"
   }
 }
